test: add tests for various DAA conditions